# imgui_bundle

./: .gitmodules  CMakeLists.txt  pyproject.toml
bindings/imgui_bundle/demos_python/notebooks/: demo_notebook.ipynb
src/: module.cpp  pybind_imgui.cpp  pybind_imgui_backends.cpp  pybind_imgui_internal.cpp
src/pyimgui/: __init__.py
