[build-system]
requires = ["scikit-build-core>=0.9.1", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "pyimgui"
version = "1.6.0"  # Remember to mirror changes on line 2 of main CMakeLists!

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

